--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Build image
+      - name: Build dpkg
         run: cd dpkg && dpkg-buildpackage --no-sign
-      - name: Upload image
+      - name: Upload dpkg
         uses: actions/upload-artifact@v2
         with:
           name: ${{ matrix.BOARD }}-${{ matrix.MODEL }}
