Ready to produce first release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,12 +7,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Set variables
+        run: echo "VERSION=$(date +%Y%m%d-%H%M)" >> $GITHUB_ENV
       - name: Fix permission
         run: sudo chown -R root:root ./dpkg
       - name: Build dpkg
         run: dpkg-deb --build ./dpkg
-      - name: Upload dpkg
-        uses: actions/upload-artifact@v2
+      - name: Release
+        uses: ncipollo/release-action@v1
         with:
-          name: dpkg
-          path: ./dpkg.deb
+          artifacts: './dpkg.deb'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ env.VERSION }}
+          bodyFile: './README.md'
+          commit: main
