Convert to Debian format

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,36 +1,84 @@
-name: Release
+name: Build & Release
 on:
   workflow_dispatch:
+  pull_request:
   push:
-    paths:
-      - 'VERSION'
 
 jobs:
-  release:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           submodules: recursive
-      - name: Install dependency
+          fetch-depth: 0
+      - name: Test
         run: |
-          sudo gem i fpm -f
+          make test
       - name: Build
-        run: make
-      - name: Generate environmental variables
         run: |
-          echo "tag_name=$(cat VERSION)" >> $GITHUB_ENV
-          echo "name=$(cat NAME)_$(cat VERSION)" >> $GITHUB_ENV
+          sudo apt-get update
+          sudo apt-get build-dep --no-install-recommends -y .
+          make all deb
+      - name: Workaround actions/upload-artifact#176
+        run: |
+          echo "artifacts_path=$(realpath ..)" >> $GITHUB_ENV
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ github.event.repository.name }}
+          path: |
+            ${{ env.artifacts_path }}/*.deb
+  release:
+    runs-on: ubuntu-22.04
+    needs: build
+    if: ${{ github.event_name != 'pull_request' && github.ref_name == 'main' }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
+          fetch-depth: 0
+      - uses: actions/download-artifact@v3
+        with:
+          name: ${{ github.event.repository.name }}
+      - name: Check if the latest version is releasable
+        run: |
+          version="$(dpkg-parsechangelog -S Version)"
+          echo "version=$version" >> $GITHUB_ENV
+          echo "changes<<EOF" >> $GITHUB_ENV
+          echo '```' >> $GITHUB_ENV
+          echo "$(dpkg-parsechangelog -S Changes)" >> $GITHUB_ENV
+          echo '```' >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+          if [[ -n "$(git tag -l "$version")" ]]
+          then
+            echo "distro=UNRELEASED" >> $GITHUB_ENV
+          else
+            echo "distro=$(dpkg-parsechangelog -S Distribution)" >> $GITHUB_ENV
+          fi
+          echo "$version" > VERSION
       - name: Release
-        id: release
+        if: env.distro != 'UNRELEASED'
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ env.tag_name }}
+          tag_name: ${{ env.version }}
           body_path: README.md
           token: ${{ secrets.GITHUB_TOKEN }}
           target_commitish: main
           draft: false
+          fail_on_unmatched_files: false
           files: |
+            *.deb
+            pkg.conf
             VERSION
-            ${{ env.name }}_*.deb
+      - name: Append changelog
+        if: env.distro != 'UNRELEASED'
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ env.version }}
+          body: |
+            ## Changelog for ${{ env.version }}
+            ${{ env.changes }}
+          append_body: true
