--- a/debian/radxa-otgutils.radxa-usbnet.service
+++ b/debian/radxa-otgutils.radxa-usbnet.service
@@ -4,7 +4,7 @@ Documentation=https://github.com/radxa-pkg/radxa-otgutils/
 After=network.target
 
 [Service]
-Type=forking
+RemainAfterExit=yes
 ExecStart=/usr/sbin/radxa-usbnet start
 ExecStop=/usr/sbin/radxa-usbnet stop
 ExecReload=/usr/sbin/radxa-usbnet reload
