--- a/debian/radxa-otgutils.radxa-adbd.service
+++ b/debian/radxa-otgutils.radxa-adbd.service
@@ -5,9 +5,9 @@ After=network.target
 
 [Service]
 RemainAfterExit=yes
-ExecStart=/usr/sbin/radxa-adbd start
-ExecStop=/usr/sbin/radxa-adbd stop
-ExecReload=/usr/sbin/radxa-adbd reload
+ExecStart=/usr/sbin/radxa-otgutils adbd start
+ExecStop=/usr/sbin/radxa-otgutils adbd stop
+ExecReload=/usr/sbin/radxa-otgutils adbd reload
 
 [Install]
 WantedBy=multi-user.target
