--- a/debian/radxa-otgutils.radxa-adbd@.service
+++ b/debian/radxa-otgutils.radxa-adbd@.service
@@ -5,9 +5,9 @@ After=network.target
 
 [Service]
 RemainAfterExit=yes
-ExecStart=/usr/sbin/radxa-otgutils adbd start
-ExecStop=/usr/sbin/radxa-otgutils adbd stop
-ExecReload=/usr/sbin/radxa-otgutils adbd reload
+ExecStart=/usr/sbin/radxa-otgutils adbd start %i
+ExecStop=/usr/sbin/radxa-otgutils adbd stop %i
+ExecReload=/usr/sbin/radxa-otgutils adbd reload %i
 
 [Install]
 WantedBy=multi-user.target
