--- a/debian/radxa-otgutils.radxa-usbnet@.service
+++ b/debian/radxa-otgutils.radxa-usbnet@.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Enable USB Ethernet on supported Radxa products
+Description=Enable USB Ethernet on %i
 Documentation=https://github.com/radxa-pkg/radxa-otgutils/
 After=network.target
 
