--- a/debian/radxa-otgutils.radxa-usbnet@.service
+++ b/debian/radxa-otgutils.radxa-usbnet@.service
@@ -5,9 +5,9 @@ After=network.target
 
 [Service]
 RemainAfterExit=yes
-ExecStart=/usr/sbin/radxa-otgutils usbnet start %i
-ExecStop=/usr/sbin/radxa-otgutils usbnet stop %i
-ExecReload=/usr/sbin/radxa-otgutils usbnet reload %i
+ExecStart=/usr/sbin/radxa-otgutils usbnet %i start
+ExecStop=/usr/sbin/radxa-otgutils usbnet %i stop
+ExecReload=/usr/sbin/radxa-otgutils usbnet %i reload
 
 [Install]
 WantedBy=multi-user.target
