--- a/debian/rules
+++ b/debian/rules
@@ -10,5 +10,5 @@ override_dh_builddeb:
 	dh_builddeb -- -Zxz
 
 override_dh_installsystemd:
-	dh_installsystemd --no-enable --no-start --name=radxa-adbd@
-	dh_installsystemd --no-enable --no-start --name=radxa-usbnet@
+	dh_installsystemd --name=radxa-adbd@
+	dh_installsystemd --name=radxa-usbnet@
