feat; update CI

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,13 +6,26 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           submodules: recursive
           fetch-depth: 0
+      - name: pre-commit check
+        run: |
+          pip install pre-commit
+          if ! pre-commit run --all-files --show-diff-on-failure
+          then
+            echo ''
+            echo '=== Code style issue detected! ==='
+            echo 'Suggest changes are listed above.'
+            echo 'Please install pre-commit and run `pre-commit run --all-files` to fix it.'
+            echo 'Strongly recommended to run `pre-commit install` to catch issues before pushing.'
+            echo 'You can learn more abour pre-commit from https://pre-commit.com/'
+            exit 1
+          fi
       - name: Test
         run: |
           make test
@@ -31,7 +44,7 @@ jobs:
           path: |
             ${{ env.artifacts_path }}/*.deb
   release:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     needs: build
     if: ${{ github.event_name != 'pull_request' && github.ref_name == 'main' }}
     steps:
@@ -82,3 +95,10 @@ jobs:
             ## Changelog for ${{ env.version }}
             ${{ env.changes }}
           append_body: true
+      - name: Update Test repos
+        if: env.distro != 'UNRELEASED'
+        uses: radxa-repo/update-repo-action@main
+        with:
+          test-repo: true
+          token: ${{ secrets.RADXA_APT_TEST_REPO_TOKEN }}
+    
