--- a/debian/radxa-otgutils.radxa-ncm@.service
+++ b/debian/radxa-otgutils.radxa-ncm@.service
@@ -1,12 +1,12 @@
 [Unit]
-Description=Enable adbd on %i
+Description=Enable USB CDC Network Control Model on %i
 Documentation=https://github.com/radxa-pkg/radxa-otgutils/
 
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/usr/sbin/radxa-otgutils adbd %i start
-ExecStop=/usr/sbin/radxa-otgutils adbd %i stop
+ExecStart=/usr/sbin/radxa-otgutils ncm %i start
+ExecStop=/usr/sbin/radxa-otgutils ncm %i stop
 Restart=on-failure
 RestartSec=5s
 
